--- a/scss/layouts/_main-container.scss
+++ b/scss/layouts/_main-container.scss
@@ -1,5 +1,5 @@
 .main-container {
-  & img {
+  img {
     width: 100%;
     height: 275px;
 
@@ -8,6 +8,8 @@
   .menus-container {
     background: $grey1;
     border-radius: 40px 40px 0px 0px;
+    margin-top: 63px;
+
   }
 
   .main-container__img {
@@ -25,7 +27,6 @@
 
     .fa-regular {
       @include absolute-el(50%, 0%, 0%, 80%, 0%, 0%);
-
       font-size: 1.5rem;
     }
 
@@ -62,7 +63,7 @@
   }
 
   .menus-container__title h2 {
-    padding: 25px 10px 10px;
+    padding: 25px 10px 0 10px;
     text-align: left;
     font-family: $font3;
     font-size: 1rem;
@@ -71,73 +72,105 @@
 
   .menus-container__title__style {
     border-top: 3px solid $green1;
-    width: 10%;
-    padding-right: 10px;
+    width: 35px;
+    margin-left: 10px;
   }
 
-  /* .menus-container__title h2 ::after {
-    content: "";
-    position: absolute;
-    top: 10%;
-    right: 10%;
-    width: 100%;
-    height: 3px;
-    background: red;
-  }
-*/
+
   .menus-container__cards_title {
+    line-height: 25px;
     text-align: left;
     padding: 0 10px;
     overflow: hidden;
     width: 70%;
     transition: all ease-in-out 0.4s;
+
+    h3 {
+
+      font-size: 1.125rem;
+    }
   }
 
-  .menus-container__cards_title__anim {
+  .menus-container__cards_title__text {
+
     white-space: nowrap;
     transition: all ease-in-out 0.4s;
   }
 
-  .menus-container__cards:hover {
-    background: blue;
-
-    .menus-container__cards_title__anim {
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-  }
-
-  .menus-container__cards_content {
-    display: flex;
-    padding: 0 10px;
-  }
-
   .menus-container__cards {
     position: relative;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
     background: white;
     height: 69px;
-    border-radius: 15px;
+    border-radius: 15.0431px;
     margin: 10px;
     gap: 5px;
     box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-  }
 
-  .menus-container__cards_content__price {
-    height: 69px;
-    display: flex;
-    align-items: center;
-  }
 
-  /*.menus-container__cards_content__price__anim {
-    @include absolute-el(0%, 0%, 0%, 100%, 0%, 0%);
-    border-radius: 0px 15px 15px 0px;
-    opacity: 0.8;
-    background: $green1;
-    width: 59px;
-    height: 69px;
+    .menus-container__cards_content__price__anim {
+      background: $green1;
+      width: 100%;
+    }
+
+    &:hover {
+      .menus-container__cards_content__price {
+        transform: translateX(0);
+      }
+
+      .menus-container__cards_title__text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+
+    .menus-container__cards_content {
+      height: 100%;
+
+
+
+
+      p {
+        font-family: $font5;
+        font-size: 0.94rem;
+
+
+      }
+    }
+
+    .menus-container__cards_content__price {
+
+      display: flex;
+      align-items: flex-end;
+      width: 60%;
+      height: 100%;
+      transform: translateX(65px);
+      transition: all 0.8s;
+
+
+      .fa-circle-check {
+        color: white;
+      }
+
+
+
+      span {
+        margin-left: 30px;
+        border-radius: 0 15px 15px 0;
+        padding: 0 15px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+
+      }
+    }
   }
-  */
 }
