--- a/scss/layouts/_loader.scss
+++ b/scss/layouts/_loader.scss
@@ -1,20 +1,10 @@
 .loader {
     margin: auto;
-    opacity: 1;
+
     width: 155px;
     height: 155px;
     position: relative;
-    animation: logofader 2s linear 1.5s forwards;
-}
-
-@keyframes logofader {
-    0% {
-        transform: opacity(0);
-    }
-
-    100% {
-        transform: opacity(100%);
-    }
+    animation: logofader 2s linear 1.5s;
 }
 
 .loader div {
@@ -35,32 +25,60 @@
     width: 155px;
     height: 155px;
     border-radius: 50%;
+    filter: blur(3px);
     border: 5px solid #008766;
     border-top-color: transparent;
     border-bottom-color: transparent;
-    animation: animcercle 2s linear forwards;
+    animation: animcercle 2s linear;
 }
 
 .circle2 {
     width: 110px;
     height: 110px;
-
+    filter: blur(2px);
     border-radius: 50%;
     border: 5px solid #99e2d0;
     border-right-color: transparent;
     border-left-color: transparent;
-    animation: animcercle 1s linear reverse forwards;
+    animation: animcercle 1s linear reverse;
 }
 
 .log__anim {
+    z-index: 5;
+    color: #9356dc;
     width: 104px;
     height: 128px;
-    left: 42%;
-    opacity: 0;
+    left: 48%;
+    opacity: 1;
     top: 70%;
     margin: -47px 0px 0px -52px;
     font-size: 2rem;
-    animation: logofader 2s linear 1.5s forwards;
+}
+
+.log__anim p {
+    font-family: $font1;
+    font-size: 1.5rem;
+
+
+    opacity: 0;
+    animation: zoom ease-in-out 2.3s;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(0);
+        opacity: 0.5;
+    }
+
+    50% {
+        transform: scale(0.5);
+        opacity: 0.75;
+    }
+
+    100% {
+        transform: scale(0);
+
+    }
 }
 
 .cercle2 {
@@ -76,16 +94,19 @@
     width: 90px;
     height: 90px;
     border-radius: 50%;
+    filter: blur(2px);
     border: 5px dotted #008766;
-    animation: animcercle 2s linear forwards;
+    animation: animcercle 2s linear;
 }
 
 .circle4 {
     width: 60px;
     height: 60px;
     border-radius: 50%;
+    filter: blur(2px);
     border: 5px dotted #99e2d0;
-    animation: animcercle 1s linear reverse forwards;
+
+    animation: animcercle 1s linear reverse;
 }
 
 .cercle5 {
