--- a/scss/layouts/_main-container.scss
+++ b/scss/layouts/_main-container.scss
@@ -68,13 +68,20 @@
     font-family: $font3;
     font-size: 1rem;
     text-transform: uppercase;
+    position: relative;
+
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      background: $green1;
+      height: 3px;
+      width: 35px;
+    }
   }
 
-  .menus-container__title__style {
-    border-top: 3px solid $green1;
-    width: 35px;
-    margin-left: 10px;
-  }
+
 
 
   .menus-container__cards_title {
