--- a/scss/layouts/_loader.scss
+++ b/scss/layouts/_loader.scss
@@ -1,118 +1,140 @@
-.loader {
-    margin: auto;
-
-    width: 155px;
-    height: 155px;
-    position: relative;
-    animation: logofader 2s linear 1.5s;
-}
-
-.loader div {
-    position: absolute;
-}
-
-@keyframes animcercle {
-    0% {
-        transform: rotate(0) deg;
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.circle1 {
-    width: 155px;
-    height: 155px;
-    border-radius: 50%;
-    filter: blur(3px);
-    border: 5px solid #008766;
-    border-top-color: transparent;
-    border-bottom-color: transparent;
-    animation: animcercle 2s linear;
-}
-
-.circle2 {
-    width: 110px;
-    height: 110px;
-    filter: blur(2px);
-    border-radius: 50%;
-    border: 5px solid #99e2d0;
-    border-right-color: transparent;
-    border-left-color: transparent;
-    animation: animcercle 1s linear reverse;
-}
-
-.log__anim {
-    z-index: 5;
-    color: #9356dc;
-    width: 104px;
-    height: 128px;
-    left: 48%;
-    opacity: 1;
-    top: 70%;
-    margin: -47px 0px 0px -52px;
-    font-size: 2rem;
-}
-
-.log__anim p {
-    font-family: $font1;
-    font-size: 1.5rem;
-
-
-    opacity: 0;
-    animation: zoom ease-in-out 2.3s;
-}
-
-@keyframes zoom {
-    0% {
-        transform: scale(0);
-        opacity: 0.5;
-    }
-
-    50% {
-        transform: scale(0.5);
-        opacity: 0.75;
-    }
-
-    100% {
-        transform: scale(0);
-
-    }
-}
-
-.cercle2 {
-    left: 50%;
-    top: 50%;
-    margin: -55px 0px 0px -55px;
-}
-
-.circle3 {
+.main-container__loader {
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    filter: blur(2px);
-    border: 5px dotted #008766;
-    animation: animcercle 2s linear;
-}
+    align-items: center;
+    height: 100%;
+    width: 100%;
 
-.circle4 {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    filter: blur(2px);
-    border: 5px dotted #99e2d0;
+    animation: fadeOut 1s linear 1s forwards;
 
-    animation: animcercle 1s linear reverse;
-}
+    .loader {
 
-.cercle5 {
-    width: 90px;
-    height: 90px;
-    left: 50%;
-    top: 50%;
-    margin: -45px 0px 0px -45px;
+        margin: auto;
+
+        width: 155px;
+        height: 155px;
+        position: relative;
+        animation: logofader 2s linear 1.5s;
+    }
+
+    .loader div {
+        position: absolute;
+    }
+
+    @keyframes animcercle {
+        0% {
+            transform: rotate(0) deg;
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    .circle1 {
+        width: 155px;
+        height: 155px;
+        border-radius: 50%;
+        filter: blur(3px);
+        border: 5px solid #008766;
+        border-top-color: transparent;
+        border-bottom-color: transparent;
+        animation: animcercle 2s linear;
+    }
+
+    .circle2 {
+        width: 110px;
+        height: 110px;
+        filter: blur(2px);
+        border-radius: 50%;
+        border: 5px solid #99e2d0;
+        border-right-color: transparent;
+        border-left-color: transparent;
+        animation: animcercle 1s linear reverse;
+    }
+
+    .circle1__log__anim {
+        z-index: 5;
+        color: #9356dc;
+        width: 104px;
+        height: 128px;
+        left: 48%;
+        opacity: 1;
+        top: 70%;
+        margin: -47px 0px 0px -52px;
+        font-size: 2rem;
+    }
+
+    .circle1__log__anim p {
+        font-family: $font1;
+        font-size: 1.5rem;
+
+
+        opacity: 0;
+        animation: zoom ease-in-out 2.3s;
+    }
+
+    @keyframes fadeOut {
+        0% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            display: none;
+        }
+    }
+
+    @keyframes zoom {
+        0% {
+            transform: scale(0);
+            opacity: 0.5;
+        }
+
+        50% {
+            transform: scale(0.5);
+            opacity: 0.75;
+        }
+
+        100% {
+            transform: scale(0);
+
+        }
+    }
+
+    .cercle2 {
+        left: 50%;
+        top: 50%;
+        margin: -55px 0px 0px -55px;
+    }
+
+    .circle3 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
+        filter: blur(2px);
+        border: 5px dotted #008766;
+        animation: animcercle 2s linear;
+    }
+
+    .circle4 {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        filter: blur(2px);
+        border: 5px dotted #99e2d0;
+
+        animation: animcercle 1s linear reverse;
+    }
+
+    .cercle5 {
+        width: 90px;
+        height: 90px;
+        left: 50%;
+        top: 50%;
+        margin: -45px 0px 0px -45px;
+    }
 }
