--- a/scss/layouts/_loader.scss
+++ b/scss/layouts/_loader.scss
@@ -11,8 +11,8 @@
 
         margin: auto;
 
-        width: 155px;
-        height: 155px;
+        width: 135px;
+        height: 135px;
         position: relative;
         animation: logofader 2s linear 1.5s;
     }
@@ -23,7 +23,7 @@
 
     @keyframes animcercle {
         0% {
-            transform: rotate(0) deg;
+            transform: rotate(0);
         }
 
         100% {
@@ -32,8 +32,8 @@
     }
 
     .circle1 {
-        width: 155px;
-        height: 155px;
+        width: 135px;
+        height: 135px;
         border-radius: 50%;
         filter: blur(3px);
         border: 5px solid #008766;
@@ -68,8 +68,6 @@
     .circle1__log__anim p {
         font-family: $font1;
         font-size: 1.5rem;
-
-
         opacity: 0;
         animation: zoom ease-in-out 2.3s;
     }
