--- a/scss/applets/_header.scss
+++ b/scss/applets/_header.scss
@@ -1,17 +1,17 @@
 header {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   .header__logo {
     justify-content: center;
     display: flex;
     padding: 15px;
   }
-  .header__logo img {
-    width: 50%;
-  }
+
 
   .header__loc {
+    width: 100%;
     @extend %all-center;
     background: $grey1;
     display: flex;
@@ -23,12 +23,13 @@ header {
   }
 
   .header__pages {
-    width: 100%;
+
     @extend %all-center;
     display: flex;
     justify-content: space-around;
     margin-bottom: 150px;
   }
+
   .header__pages i {
     padding-left: 10px;
   }
