--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -5,13 +5,16 @@ button {
   font-family: $font4;
   color: white;
   width: 70%;
+  max-width: 335px;
   height: 50px;
   border-radius: 25px;
-  margin: 20px 0;
+  margin: 20px 0 50px;
   box-shadow: 0px 4px 10px rgba(59, 59, 59, 0.25);
   transition: all 453ms linear;
+
   &:hover {
     background: $gradient2;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.35);
   }
+
 }
