--- a/scss/applets/_footer.scss
+++ b/scss/applets/_footer.scss
@@ -7,15 +7,45 @@ footer {
   grid-template-rows: 30% 70%;
   padding: 30px;
 
+  @media screen and (min-width: 1224px) {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 150px;
+    height: 114px;
+
+    h5 {
+      margin-right: 20px;
+    }
+
+  }
+
+  .partnership {
+    display: flex;
+  }
+
   .partnership ul {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
+    gap: 40px;
     padding-bottom: 50px;
-  }
-  .partnership ul li i {
-    padding-right: 10px;
+
+    #ustensils,
+    #handshake {
+      padding-right: 10px;
+    }
+
+
+
+    @media screen and (min-width: 1224px) {
+      flex-direction: row;
+
+
+    }
+
+
   }
 }
