--- a/scss/applets/_settings.scss
+++ b/scss/applets/_settings.scss
@@ -2,23 +2,27 @@
 
 @font-face {
   font-family: "Shrikhand";
-  src: url(../../assets/fonts/Shrikhand-Regular.ttf);
+  src: url(../../assets/fonts/Shrikhand-Regular.ttf)
 }
+
 @font-face {
   font-family: "Roboto";
   src: url(../../fonts/Roboto-Regular.ttf);
 }
+
 @font-face {
   font-family: "Roboto-bold";
-  src: url(../../fonts/Roboto-Bold.ttf);
+  src: url(../../assets/fonts/Roboto-Bold.ttf)
 }
+
 @font-face {
   font-family: "Roboto-Light";
-  src: url(../../fonts/Roboto-Light.ttf);
+  src: url(../../assets/fonts/Roboto-Light.ttf)
 }
+
 @font-face {
   font-family: "Roboto-Medium";
-  src: url(../../fonts/Roboto-Medium.ttf);
+  src: url(../../assets/fonts/Roboto-Medium.ttf)
 }
 
 // Variables :
@@ -40,11 +44,9 @@ $green1: #99e2d0;
 $green2: #008766;
 $purple: #9356dc;
 
-$gradient1: linear-gradient(
-    0deg,
+$gradient1: linear-gradient(0deg,
     rgba(255, 255, 255, 0.15),
-    rgba(255, 255, 255, 0.15)
-  ),
+    rgba(255, 255, 255, 0.15)),
   linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
 
 $gradient2: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
@@ -59,10 +61,16 @@ $gradient2: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
 a {
   color: $black;
 }
+
 li {
   list-style: none;
 }
+
 body {
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  max-width: 1440px;
   text-align: center;
   font-family: $font4;
   font-size: 1rem;
